# pypi-dependency-analysis

./: .gitignore  exploration.py  graph.py  pyproject.toml  utils.py
pypi-reverse-dependencies/: fetch.py  graph.py
